--- a/academy_profile.html
+++ b/academy_profile.html
@@ -12,7 +12,7 @@
 <meta name="keywords" content="academy, course, education, elearning, learning, education html template, university template, college template, school template, online education template, tution center template">
 
 <!-- SITE TITLE -->
-<title>ABMAPLAB - Course Detail PLAB2</title>
+<title>ABMAPLAB - Academy Profile</title>
 <!-- Favicon Icon -->
 <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
 <!-- Animation CSS -->
@@ -89,10 +89,10 @@
               <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
 					<li ><a class="nav-link "  href="index.html">Home</a></li>
-                    <li class="dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">About Us</a>
+                    <li class="dropdown"><a class="dropdown-toggle nav-link active" data-toggle="dropdown" href="#">About Us</a>
                         <div class="dropdown-menu">
                             <ul>
-                                <li><a class="dropdown-item nav-link nav_item" href="academy_profile.html">Academy Profile</a></li>
+                                <li><a class="dropdown-item nav-link nav_item active" href="academy_profile.html">Academy Profile</a></li>
                                 <li><a class="dropdown-item nav-link nav_item" href="our_association.html">Our Association</a></li>
                                 <li><a class="dropdown-item nav-link nav_item" href="our_faculties.html">Our Faculties</a></li>
                                 <li><a class="dropdown-item nav-link nav_item" href="gallery.html">Gallery</a></li>
@@ -101,11 +101,11 @@
                     </li>
                     <li><a class="nav-link " href="waytoplab.html">Way To PLAB</a></li>
 
-                    <li class="dropdown"><a class="dropdown-toggle nav-link active" data-toggle="dropdown" href="#">PLAB Courses</a>
+                    <li class="dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">PLAB Courses</a>
                         <div class="dropdown-menu">
                             <ul>
                                 <li><a class="dropdown-item nav-link nav_item" href="course-plab1-detail.html">PLAB-1 Course</a></li>
-                                <li><a class="dropdown-item nav-link nav_item active" href="course-plab2-detail.html">PLAB-2 Course</a></li>
+                                <li><a class="dropdown-item nav-link nav_item" href="course-plab2-detail.html">PLAB-2 Course</a></li>
                             </ul>
                         </div>
                     </li>
@@ -129,17 +129,18 @@
 <!-- END HEADER -->
 
 <!-- START SECTION BREADCRUMB -->
-<div class="breadcrumb_section background_bg overlay_bg_50 page_title_light" data-img-src="assets/images/plab2_bg.jpg">
+<div class="breadcrumb_section background_bg overlay_bg_60 page_title_light" data-img-src="assets/images/plab1_bg.jpg">
     <div class="container"><!-- STRART CONTAINER -->
         <div class="row">
             <div class="col-sm-12">
-                <div class="page-title">
-            		<h1>Course Detail</h1>
+                <div class="page-title" >
+            		<h1>Academy Profile</h1>
                 </div>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Courses</a></li>
-                    <li class="breadcrumb-item active">PLAB-2</li>
+                    <li class="breadcrumb-item"><a href="#">About Us</a></li>
+                    <li class="breadcrumb-item active">Academy Profile</li>
+                    <h5 class="text-justify" data-animation-delay="0.4s"><br><br>Arlington British Medical Academy (ABMA) is an award-winning UK based medical academy which has diverse interests in medical education in the UK and across the globe. The company was established in 2013 “by doctors for doctors and healthcare professionals”.</h5>
                 </ol>
             </div>
         </div>
@@ -147,53 +148,44 @@
 </div>
 <!-- END SECTION BREADCRUMB -->
 
-<!-- START SECTION EVENT DETAIL -->
-<div class="section">
+<!-- START SECTION ACADEMY -->
+<div class="section small_pb">
 	<div class="container">
-    	<div class="row">
-        	<div class="col-xl-12 col-lg-8">
-            	<div class="single_course">
-                    <div class="courses_title">
-                        <h4>PLAB 2 COURSE</h4>
+        <div class="row">
+        	<div class="col-lg-4">
+            	<div class="team_single">
+                	<div class="team_img">
+                    	<img src="assets/images/zubair.png" alt="team_img_big">
                     </div>
-                    <div class="course_img">
-						<a href="#">
-                            <img src="assets/images/plab2-home.jpg" alt="course_img">
-                        </a>
-                    </div>
-                    <div class="course_info">
-                        <div class="course_desc"> 
-                        	<div class="heading_s1">
-                        		<h4>Description:</h4>
+                </div>
+            </div>
+            <div class="col-lg-8">
+            	<div class="team_detail">
+                    <div class="teacher_desc">
+                    	<div class="team_single_info">
+                            <div class="team_name">
+                                <h5>Dr. Zubair Ahmad</h5>
+                                <span>MBBS, MS, MRCGP, DRCOG, DFFP, FRCGP</span><br>
+                                <span>Founder Director - ABMA, UK</span><br>
                             </div>
-                        	<p class="text-justify">We are regarded as one of the best training institutes in the UK as far as PLAB is concerned. If you are looking for the best training institute for PLAB, then we are your one-stop destination.</p>
-                            <p class="text-justify">We offer comprehensive training that would enable our students to crack the exam. Apart from the technical aspect, we also take care of the communication part as we understand that it is very important to make sure that the doctors are well versed with the linguistic skills.</p>
-                                <ul class="widget_categories">
-                                    <li><a href="#"><span class="categories_name">PLAB 2 Face2Face Course in Manchester (12 full day)</span>
-                                    <li><a href="#"><span class="categories_name">PLAB 2 Online Course (12 day)</span>
-                                    <h4><br>Course Highlight:</h4>
-                                    <li><a href="#"><span class="categories_name">Course covers all aspects of PLAB 2 as per GMC</span></a></li>
-                                    <li><a href="#"><span class="categories_name">Focus on communication & interpersonal skills</span></a></li>
-                                    <li><a href="#"><span class="categories_name">Up to date UK guidelines and protocols</span></a></li>
-                                    <li><a href="#"><span class="categories_name">Includes 2 mocks with individual feedback</span></a></li>
-                                    <li><a href="#"><span class="categories_name">Comprehensive study materials/notes</span></a></li>
-                                    <li><a href="#"><span class="categories_name">Equipped with all modern facilities</span></a></li>
-                                    <li><a href="#"><span class="categories_name">Mannequin & other practical teaching</span></a></li>
-                                    <li><a href="#"><span class="categories_name">Own accommodation near the course venue</span></a></li>
-                                    <li><a href="#"><span class="categories_name">Dedicated WhatsApp group for discussion</span></a></li>
-                                    <li><a href="#"><span class="categories_name">Brand new spacious premises</span></a></li>         
-                                </ul>
-                            </p>
-                            
                         </div>
-                        
                     </div>
-				</div>
+                    <div class="row">
+                        <div class="col-sm-12 mb-2 mb-md-0">
+                            <div class="content_box">
+                                <span class="text_default text-justify"><br>GP Trainer -  Health Education Board, North West Deanery of England, UK</span>
+                                <span class="text_default text-justify">Clinical Supervisor - Foundational Training Programme, UK</span>                          
+                                <span class="text_default text-justify">Clinical Supervisor - 4th & 5th Year Medical Students, Manchester Medical College, Manchester, UK</span>
+                                <span class="text_default text-justify">Course Director - MRCGP & PLAB</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<!-- END SECTION EVENT DETAIL -->
+<!-- END SECTION ACADEMY -->
 
 <!-- START FOOTER -->
 <footer class="bg_dark footer_dark">
