--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <meta name="keywords" content="academy, course, education, elearning, learning, education html template, university template, college template, school template, online education template, tution center template">
 
 <!-- SITE TITLE -->
-<title>ABMAPLAB-ContactUs</title>
+<title>ABMAPLAB - Contact Us</title>
 <!-- Favicon Icon -->
 <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
 <!-- Animation CSS -->
@@ -82,32 +82,43 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg"> 
         	<a class="navbar-brand" href="index.html"> 
+            	<img class="logo_light" src="assets/images/logo_light.png" alt="logo"> 
                 <img class="logo_dark" src="assets/images/logo_dark.png" alt="logo"> 
             </a>
           	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-expanded="false"> <span class="ion-android-menu"></span> </button>
-			<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+              <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-					<li><a class="nav-link " href="index.html">Home</a></li>
-                    <li><a class="nav-link " href="about.html">About Us</a></li>
-                    <li><a class="nav-link " href="404.html">Way To PLAB</a></li>
+					<li ><a class="nav-link "  href="index.html">Home</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">About Us</a>
+                        <div class="dropdown-menu">
+                            <ul>
+                                <li><a class="dropdown-item nav-link nav_item" href="academy_profile.html">Academy Profile</a></li>
+                                <li><a class="dropdown-item nav-link nav_item" href="our_association.html">Our Association</a></li>
+                                <li><a class="dropdown-item nav-link nav_item" href="our_faculties.html">Our Faculties</a></li>
+                                <li><a class="dropdown-item nav-link nav_item" href="gallery.html">Gallery</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li><a class="nav-link " href="waytoplab.html">Way To PLAB</a></li>
+
                     <li class="dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">PLAB Courses</a>
                         <div class="dropdown-menu">
-							<ul>
+                            <ul>
                                 <li><a class="dropdown-item nav-link nav_item" href="course-plab1-detail.html">PLAB-1 Course</a></li>
                                 <li><a class="dropdown-item nav-link nav_item" href="course-plab2-detail.html">PLAB-2 Course</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><a class="nav-link" href="fullscholorship.html">Full Sponsorship Program</a></li>
-                    <li><a class="nav-link" href="gallery.html">Gallery</a></li>
                     <li><a class="nav-link active" href="contact.html">Contact US</a></li>
+                    
                     <li class="dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">More</a>
-                        <div class="dropdown-menu">
-							<ul>
-                                <li><a class="dropdown-item nav-link nav_item" href="#">Video</a></li>
+                        <div class="dropdown-menu dropdown-reverse">
+                         	<ul>
+                                <li><a class="dropdown-item nav-link nav_item" href="video.html">Video</a></li>
                                 <li><a class="dropdown-item nav-link nav_item" href="faq.html">FAQ-PLAB</a></li>
                                 <li><a class="dropdown-item nav-link nav_item" href="login.html">Admin Login</a></li>
-                            </ul>
+                        	</ul>
                         </div>
                     </li>
                 </ul>
@@ -123,11 +134,11 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="page-title">
-            		<h1>Contact</h1>
+            		<h1>Contact Us</h1>
                 </div>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item active">Contact</li>
+                    <li class="breadcrumb-item active">Contact Us</li>
                 </ol>
             </div>
         </div>
@@ -139,36 +150,48 @@
 <div class="section pb_70">
     <div class="container">
         <div class="row">
+            <div class="col-lg-3 col-md-6">
+            	<div class="contact_wrap contact_style1">
+                    <div class="contact_icon">
+                        <i class="ti-location-pin"></i>
+                    </div>
+                    <div class="contact_text">
+                        <span>Address-1</span>
+                        <p>167 Union Street, Oldham, Greater Manchester OL1 1TD, UK</p>
+                    </div>
+                </div>
+            </div>
             <div class="col-lg-4 col-md-6">
             	<div class="contact_wrap contact_style1">
                     <div class="contact_icon">
                         <i class="ti-location-pin"></i>
                     </div>
                     <div class="contact_text">
-                        <span>Address</span>
-                        <p>123 Street, Old Trafford, London, UK</p>
+                        <span>Address-2</span>
+                        <p>Plot No-1, Tikaitroy LDA Colony, Opp- Uptron Power House, Mohaan Road, Rajaji Puram, Lucknow, INDIA</p>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-2 col-md-6">
             	<div class="contact_wrap contact_style1">
                     <div class="contact_icon">
                         <i class="ti-mobile"></i>
                     </div>
                     <div class="contact_text">
-                        <span>Phone</span>
-                        <p>+ 457 789 789 65</p>
+                        <span>Phone</span><br>
+                        <p>9670883642 <br>9670883642</p>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-3 col-md-6">
             	<div class="contact_wrap contact_style1">
                     <div class="contact_icon">
                         <i class="ti-email"></i>
                     </div>
                     <div class="contact_text">
-                        <span>Email Address</span>
-                        <a href="mailto:info@sitename.com">info@yourmail.com</a>
+                        <span>Email Address</span><br>
+                        <a href="mailto:abmaplabpltd@gmail.com">abmaplabpltd@gmail.com</a>
+                        <a href="mailto:info@abmacademy.com">info@abmacademy.com</a>
                     </div>
                 </div>
             </div>
@@ -183,7 +206,7 @@
     	<div class="row no-gutters">
         	<div class="col-12 animation" data-animation="fadeInUp" data-animation-delay="0.2s">
                 <div class="map">
-                	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193229.77301255226!2d-74.05531241936525!3d40.823236500441624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2f613438663b5%3A0xce20073c8862af08!2sW+123rd+St%2C+New+York%2C+NY%2C+USA!5e0!3m2!1sen!2sin!4v1533565007513" allowfullscreen=""></iframe>
+                	<iframe src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Plot%20No-1,%20Tikaitroy%20LDA%20Colony,%20Opp-%20Uptron%20Power%20House,%20Mohaan%20Road,%20Rajaji%20Puram,%20Lucknow,%20INDIA+(ABMAPLAB%20Pvt.%20Ltd.)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" allowfullscreen=""></iframe>
                 </div>
             </div>
         </div>
@@ -199,7 +222,7 @@
             	<div class="heading_s1 text-center">
                 	<h2>Get In touch</h2>
                 </div>
-                <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc id varius nunc.</p>
+                <p class="text-center"></p>
             </div>
         </div>
         <div class="row justify-content-center">
@@ -265,16 +288,7 @@
                     </div>
     			</div>
                 <div class="col-xl-2 col-md-4 col-sm-5">
-                    <div class="widget">
-                        <h6 class="widget_title">Useful Links</h6>
-                        <ul class="widget_links">
-                            <li><a href="#">Our Mission</a>
-                            <li><a href="#">Our services</a></li>
-                            <li><a href="#">Company history</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Support center</a>
-                        </ul>
-                    </div>
+
                 </div>
                 <div class="col-xl-5 col-md-6 col-sm-5">
                     <div class="widget">
@@ -282,7 +296,7 @@
                         <ul class="contact_info contact_info_light">
                             <li> 
                                 <i class="ti-location-pin"></i>
-                                <p>123 Street, Old Trafford, New South London , UK</p>
+                                <p>167 Union Street, Oldham, Greater Manchester OL1 1TD, UK</p>
                             </li>
                             <li> 
                                 <i class="ti-email"></i> 
@@ -308,7 +322,7 @@
     			<div class="bottom_footer border-top-tran">
     				<div class="row">
     					<div class="col-md-6">
-    						<p class="mb-md-0 text-center text-md-left">© 2021 All Rights Reserved by <span class="text_default">LAMS-Lucknow Academy of Medical Sciences (P) Ltd.</span></p>
+    						<p class="mb-md-0 text-center text-md-left">© <script>document.write(new Date().getFullYear())</script> All Rights Reserved by <span class="text_default">ABMAPLAB (P) Ltd.</span></p>
     					</div>
                         <div class="col-md-6">
                             <ul class="list_none footer_link text-center text-md-right">
