--- a/course-plab1-detail.html
+++ b/course-plab1-detail.html
@@ -12,7 +12,7 @@
 <meta name="keywords" content="academy, course, education, elearning, learning, education html template, university template, college template, school template, online education template, tution center template">
 
 <!-- SITE TITLE -->
-<title>ABMAPLAB-Course Detail PLAB1</title>
+<title>ABMAPLAB - Course Detail PLAB1</title>
 <!-- Favicon Icon -->
 <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
 <!-- Animation CSS -->
@@ -82,32 +82,43 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg"> 
         	<a class="navbar-brand" href="index.html"> 
+            	<img class="logo_light" src="assets/images/logo_light.png" alt="logo"> 
                 <img class="logo_dark" src="assets/images/logo_dark.png" alt="logo"> 
             </a>
           	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-expanded="false"> <span class="ion-android-menu"></span> </button>
-			<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+              <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-					<li><a class="nav-link " href="index.html">Home</a></li>
-                    <li><a class="nav-link " href="about.html">About Us</a></li>
-                    <li><a class="nav-link " href="404.html">Way To PLAB</a></li>
+					<li ><a class="nav-link "  href="index.html">Home</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">About Us</a>
+                        <div class="dropdown-menu">
+                            <ul>
+                                <li><a class="dropdown-item nav-link nav_item" href="academy_profile.html">Academy Profile</a></li>
+                                <li><a class="dropdown-item nav-link nav_item" href="our_association.html">Our Association</a></li>
+                                <li><a class="dropdown-item nav-link nav_item" href="our_faculties.html">Our Faculties</a></li>
+                                <li><a class="dropdown-item nav-link nav_item" href="gallery.html">Gallery</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li><a class="nav-link " href="waytoplab.html">Way To PLAB</a></li>
+
                     <li class="dropdown"><a class="dropdown-toggle nav-link active" data-toggle="dropdown" href="#">PLAB Courses</a>
                         <div class="dropdown-menu">
-							<ul>
+                            <ul>
                                 <li><a class="dropdown-item nav-link nav_item active" href="course-plab1-detail.html">PLAB-1 Course</a></li>
                                 <li><a class="dropdown-item nav-link nav_item" href="course-plab2-detail.html">PLAB-2 Course</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><a class="nav-link" href="fullscholorship.html">Full Sponsorship Program</a></li>
-                    <li><a class="nav-link" href="gallery.html">Gallery</a></li>
                     <li><a class="nav-link" href="contact.html">Contact US</a></li>
+                    
                     <li class="dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">More</a>
-                        <div class="dropdown-menu">
-							<ul>
-                                <li><a class="dropdown-item nav-link nav_item" href="#">Video</a></li>
+                        <div class="dropdown-menu dropdown-reverse">
+                         	<ul>
+                                <li><a class="dropdown-item nav-link nav_item" href="video.html">Video</a></li>
                                 <li><a class="dropdown-item nav-link nav_item" href="faq.html">FAQ-PLAB</a></li>
                                 <li><a class="dropdown-item nav-link nav_item" href="login.html">Admin Login</a></li>
-                            </ul>
+                        	</ul>
                         </div>
                     </li>
                 </ul>
@@ -140,7 +151,7 @@
 <div class="section">
 	<div class="container">
     	<div class="row">
-        	<div class="col-xl-9 col-lg-8">
+        	<div class="col-xl-12 col-lg-12">
             	<div class="single_course">
                     <div class="courses_title">
                         <h4>PLAB 1 COURSE</h4>
@@ -157,71 +168,24 @@
                             </div>
                         	<p>PLAB P 1 Course is “First of its kind” & guarantees a success for aspiring doctors wishing to take PLAB test. Delivering since 2015.
                                 <ul class="widget_categories">
-                                    <li><a href="#"><span class="categories_name">PLAB 1 Face2Face Course (2-5 full days)</span>
-                                    <li><a href="#"><span class="categories_name">PLAB 1 Online (Self-study – 3M/6M/12M)</span>
+                                    <li><a href="#"><span class="categories_name">PLAB 1 Online (Self-study – 3M/6M/12M)</span></a></li>
+                                    <li><a href="#"><span class="categories_name">PLAB 1 Live Course (4 week – Sat & Sun)</span></a></li>
+                                    <h4><br>Course Highlight:</h4>
+                                    <li><a href="#"><span class="categories_name">Tips on preparation</span></a></li>
+                                    <li><a href="#"><span class="categories_name">How to make timetable?</span></a></li>
+                                    <li><a href="#"><span class="categories_name">Up to date UK guidelines and protocols</span></a></li>
+                                    <li><a href="#"><span class="categories_name">Concentrate upon high-yield topics</span></a></li>
+                                    <li><a href="#"><span class="categories_name">Taught by Experienced UK PLAB teachers</span></a></li>
+                                    <li><a href="#"><span class="categories_name">High yields 2020 updated MCQ from each topic</span></a></li>
+                                    <li><a href="#"><span class="categories_name">Constantly updated teaching material as per GMC blueprint</span></a></li>
+                                    <li><a href="#"><span class="categories_name">MOCK tests, which will help you to perform your best on the examination day</span></a></li>
+                                    <li><a href="#"><span class="categories_name">Dedicated WhatsApp group for discussion</span></a></li>
+                                    <li><a href="#"><span class="categories_name">We promise to help you in every step of your PLAB journey, right from Part 1 to settling down in your first clinical attachment in the UK.</span></a></li>                                   
                                 </ul>
                             </p>
                         </div>
-                        <div class="course_curriculum">
-                        	<div class="heading_s1">
-                        		<h4>Course Highlights:</h4>
-                            </div>
-                        	<ul class="widget_categories">
-                                <li><a ><span class="categories_name">Concentrate upon high-yield topics</span></a></li>
-                                <li><a ><span class="categories_name">Constantly updated teaching material as per GMC blueprint</span></a></li>
-                                <li><a><span class="categories_name">Taught by Experienced UK PLAB teachers</span></a></li>
-                                <li><a ><span class="categories_name">Highly interactive sessions</span></a></li>
-                                <li><a><span class="categories_name">Concentrate upon high-yield topics</span></a></li>
-                                <li><a ><span class="categories_name">High yields 2020 updated MCQ from each topic</span></a></li>
-                                <li><a><span class="categories_name">Tips on preparation</span></a></li>
-                                <li><a ><span class="categories_name">How to make timetable?</span></a></li>                                
-                                <li><a ><span class="categories_name">MOCK tests, which will help you to perform your best on the examination day</span></a></li>                                
-                                <li><a ><span class="categories_name">We promise to help you in every step of your PLAB journey, right from Part 1 to settling down in your first clinical attachment in the UK.</span></a></li>                                                                                                    
-                            </ul>
-                        </div>
                     </div>
 				</div>
-            </div>
-        	<div class="col-xl-3 col-lg-4 mt-3 mt-lg-0">
-            	<div class="sidebar">
-                	<div class="widget widget_course_description">
-                        <ul>
-                        	<li><i class="linearicons-user"></i><span>Students:</span> <span class="item_value">16</span></li>
-                        	<li><i class="linearicons-clock"></i><span>Duration:</span> <span class="item_value"> 1h 45min</span></li>
-                            <li><i class="linearicons-signal"></i><span>Level:</span> <span class="item_value">All Level</span></li>
-                            <li><i class="linearicons-group-work"></i><span>Lectures</span> <span class="item_value">10</span></li>
-                            <li><i class="linearicons-transform"></i><span>Quizzes</span> <span class="item_value">05</span></li>
-                            <li><i class="linearicons-clipboard-text"></i><span>Assignment:</span> <span class="item_value">Yes</span></li>
-                            <li><i class="linearicons-license2"></i><span>Certificate:</span> <span class="item_value">Yes</span></li>
-                            <li><i class="linearicons-bag-dollar "></i><span>Price:</span> <span class="item_value">$22</span></li>
-                        </ul>
-                        <a href="#" class="btn btn-default btn-block">Take This Course</a>
-                    </div>
-                    <div class="widget">
-                        <h5 class="widget_title">Categories</h5>
-                        <ul class="widget_categories">
-                            <li><a href="#"><span class="categories_name">Lifestyle</span><span class="categories_num">(7)</span></a></li>
-                            <li><a href="#"><span class="categories_name">Design</span><span class="categories_num">(15)</span></a></li>
-                            <li><a href="#"><span class="categories_name">Branding</span><span class="categories_num">(8)</span></a></li>
-                            <li><a href="#"><span class="categories_name">Marketing</span><span class="categories_num">(16)</span></a></li>
-                            <li><a href="#"><span class="categories_name">Creative</span><span class="categories_num">(12)</span></a></li>
-                            <li><a href="#"><span class="categories_name">Lifestyle</span><span class="categories_num">(11)</span></a></li>
-                        </ul>
-                    </div>
-                	<div class="widget">
-                    	<h5 class="widget_title">tags</h5>
-                        <div class="tags">
-                        	<a href="#">General</a>
-                            <a href="#">Design</a>
-                            <a href="#">jQuery</a>
-                            <a href="#">Branding</a>
-                            <a href="#">Modern</a>
-                            <a href="#">Blog</a>
-                            <a href="#">Quotes</a>
-                            <a href="#">Advertisement</a>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
@@ -251,16 +215,7 @@
                     </div>
     			</div>
                 <div class="col-xl-2 col-md-4 col-sm-5">
-                    <div class="widget">
-                        <h6 class="widget_title">Useful Links</h6>
-                        <ul class="widget_links">
-                            <li><a href="#">Our Mission</a>
-                            <li><a href="#">Our services</a></li>
-                            <li><a href="#">Company history</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Support center</a>
-                        </ul>
-                    </div>
+
                 </div>
                 <div class="col-xl-5 col-md-6 col-sm-5">
                     <div class="widget">
@@ -268,7 +223,7 @@
                         <ul class="contact_info contact_info_light">
                             <li> 
                                 <i class="ti-location-pin"></i>
-                                <p>123 Street, Old Trafford, New South London , UK</p>
+                                <p>167 Union Street, Oldham, Greater Manchester OL1 1TD, UK</p>
                             </li>
                             <li> 
                                 <i class="ti-email"></i> 
@@ -294,7 +249,7 @@
     			<div class="bottom_footer border-top-tran">
     				<div class="row">
     					<div class="col-md-6">
-    						<p class="mb-md-0 text-center text-md-left">© 2021 All Rights Reserved by <span class="text_default">LAMS-Lucknow Academy of Medical Sciences (P) Ltd.</span></p>
+    						<p class="mb-md-0 text-center text-md-left">© <script>document.write(new Date().getFullYear())</script> All Rights Reserved by <span class="text_default">ABMAPLAB (P) Ltd.</span></p>
     					</div>
                         <div class="col-md-6">
                             <ul class="list_none footer_link text-center text-md-right">
