--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
 <!-- SITE TITLE -->
 <title>ABMAPLAB-Gallery</title>
 <!-- Favicon Icon -->
-<link rel="shortcut icon" type="image/x-icon" href="assets/images/gallery/favicon.png">
+<link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
 <!-- Animation CSS -->
 <link rel="stylesheet" href="assets/css/animate.css">
 <!-- Latest Bootstrap min CSS -->
@@ -82,32 +82,43 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg"> 
         	<a class="navbar-brand" href="index.html"> 
+            	<img class="logo_light" src="assets/images/logo_light.png" alt="logo"> 
                 <img class="logo_dark" src="assets/images/logo_dark.png" alt="logo"> 
             </a>
           	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-expanded="false"> <span class="ion-android-menu"></span> </button>
-			<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+              <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-					<li><a class="nav-link " href="index.html">Home</a></li>
-                    <li><a class="nav-link " href="about.html">About Us</a></li>
-                    <li><a class="nav-link " href="404.html">Way To PLAB</a></li>
+					<li ><a class="nav-link "  href="index.html">Home</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle nav-link active" data-toggle="dropdown" href="#">About Us</a>
+                        <div class="dropdown-menu">
+                            <ul>
+                                <li><a class="dropdown-item nav-link nav_item " href="academy_profile.html">Academy Profile</a></li>
+                                <li><a class="dropdown-item nav-link nav_item" href="our_association.html">Our Association</a></li>
+                                <li><a class="dropdown-item nav-link nav_item" href="our_faculties.html">Our Faculties</a></li>
+                                <li><a class="dropdown-item nav-link nav_item active" href="gallery.html">Gallery</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li><a class="nav-link " href="waytoplab.html">Way To PLAB</a></li>
+
                     <li class="dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">PLAB Courses</a>
                         <div class="dropdown-menu">
-							<ul>
+                            <ul>
                                 <li><a class="dropdown-item nav-link nav_item" href="course-plab1-detail.html">PLAB-1 Course</a></li>
                                 <li><a class="dropdown-item nav-link nav_item" href="course-plab2-detail.html">PLAB-2 Course</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><a class="nav-link" href="fullscholorship.html">Full Sponsorship Program</a></li>
-                    <li><a class="nav-link active" href="gallery.html">Gallery</a></li>
                     <li><a class="nav-link" href="contact.html">Contact US</a></li>
+                    
                     <li class="dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">More</a>
-                        <div class="dropdown-menu">
-							<ul>
-                                <li><a class="dropdown-item nav-link nav_item" href="#">Video</a></li>
+                        <div class="dropdown-menu dropdown-reverse">
+                         	<ul>
+                                <li><a class="dropdown-item nav-link nav_item" href="video.html">Video</a></li>
                                 <li><a class="dropdown-item nav-link nav_item" href="faq.html">FAQ-PLAB</a></li>
                                 <li><a class="dropdown-item nav-link nav_item" href="login.html">Admin Login</a></li>
-                            </ul>
+                        	</ul>
                         </div>
                     </li>
                 </ul>
@@ -127,6 +138,7 @@
                 </div>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
+                    <li class="breadcrumb-item"><a href="#">About Us</a></li>
                     <li class="breadcrumb-item ">Gallery</li>
                 </ol>
             </div>
@@ -265,7 +277,7 @@
     			<div class="col-xl-5 col-md-8 col-sm-5">
     				<div class="widget">
     					<div class="footer_logo"> 
-                        	<a href="index.html"><img src="assets/images/gallery/logo_light.png" alt="logo"/></a> 
+                        	<a href="index.html"><img src="assets/images/logo_light.png" alt="logo"/></a> 
                         </div>
     					<p>If you are going to use a passage of Lorem Ipsum you need to be sure there isn't anything embarrassing hidden in the middle of text</p>
     				</div>
@@ -280,16 +292,7 @@
                     </div>
     			</div>
                 <div class="col-xl-2 col-md-4 col-sm-5">
-                    <div class="widget">
-                        <h6 class="widget_title">Useful Links</h6>
-                        <ul class="widget_links">
-                            <li><a href="#">Our Mission</a>
-                            <li><a href="#">Our services</a></li>
-                            <li><a href="#">Company history</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Support center</a>
-                        </ul>
-                    </div>
+
                 </div>
                 <div class="col-xl-5 col-md-6 col-sm-5">
                     <div class="widget">
@@ -297,7 +300,7 @@
                         <ul class="contact_info contact_info_light">
                             <li> 
                                 <i class="ti-location-pin"></i>
-                                <p>123 Street, Old Trafford, New South London , UK</p>
+                                <p>167 Union Street, Oldham, Greater Manchester OL1 1TD, UK</p>
                             </li>
                             <li> 
                                 <i class="ti-email"></i> 
@@ -323,7 +326,7 @@
     			<div class="bottom_footer border-top-tran">
     				<div class="row">
     					<div class="col-md-6">
-    						<p class="mb-md-0 text-center text-md-left">© 2021 All Rights Reserved by <span class="text_default">LAMS-Lucknow Academy of Medical Sciences (P) Ltd.</span></p>
+    						<p class="mb-md-0 text-center text-md-left">© <script>document.write(new Date().getFullYear())</script> All Rights Reserved by <span class="text_default">ABMAPLAB (P) Ltd.</span></p>
     					</div>
                         <div class="col-md-6">
                             <ul class="list_none footer_link text-center text-md-right">
