--- a/login.html
+++ b/login.html
@@ -82,32 +82,43 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg"> 
         	<a class="navbar-brand" href="index.html"> 
+            	<img class="logo_light" src="assets/images/logo_light.png" alt="logo"> 
                 <img class="logo_dark" src="assets/images/logo_dark.png" alt="logo"> 
             </a>
           	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-expanded="false"> <span class="ion-android-menu"></span> </button>
-			<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+              <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-					<li><a class="nav-link " href="index.html">Home</a></li>
-                    <li><a class="nav-link " href="about.html">About Us</a></li>
-                    <li><a class="nav-link " href="404.html">Way To PLAB</a></li>
+					<li ><a class="nav-link "  href="index.html">Home</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">About Us</a>
+                        <div class="dropdown-menu">
+                            <ul>
+                                <li><a class="dropdown-item nav-link nav_item" href="academy_profile.html">Academy Profile</a></li>
+                                <li><a class="dropdown-item nav-link nav_item" href="our_association.html">Our Association</a></li>
+                                <li><a class="dropdown-item nav-link nav_item" href="our_faculties.html">Our Faculties</a></li>
+                                <li><a class="dropdown-item nav-link nav_item" href="gallery.html">Gallery</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li><a class="nav-link " href="waytoplab.html">Way To PLAB</a></li>
+
                     <li class="dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">PLAB Courses</a>
                         <div class="dropdown-menu">
-							<ul>
+                            <ul>
                                 <li><a class="dropdown-item nav-link nav_item" href="course-plab1-detail.html">PLAB-1 Course</a></li>
                                 <li><a class="dropdown-item nav-link nav_item" href="course-plab2-detail.html">PLAB-2 Course</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><a class="nav-link" href="fullscholorship.html">Full Sponsorship Program</a></li>
-                    <li><a class="nav-link" href="gallery.html">Gallery</a></li>
                     <li><a class="nav-link" href="contact.html">Contact US</a></li>
+                    
                     <li class="dropdown"><a class="dropdown-toggle nav-link active" data-toggle="dropdown" href="#">More</a>
-                        <div class="dropdown-menu">
-							<ul>
-                                <li><a class="dropdown-item nav-link nav_item" href="#">Video</a></li>
+                        <div class="dropdown-menu dropdown-reverse">
+                         	<ul>
+                                <li><a class="dropdown-item nav-link nav_item" href="video.html">Video</a></li>
                                 <li><a class="dropdown-item nav-link nav_item" href="faq.html">FAQ-PLAB</a></li>
                                 <li><a class="dropdown-item nav-link nav_item active" href="login.html">Admin Login</a></li>
-                            </ul>
+                        	</ul>
                         </div>
                     </li>
                 </ul>
@@ -164,14 +175,6 @@
                             <button type="submit" class="btn btn-default btn-block" name="login">Log in</button>
                         </div>
                     </form>
-                    <div class="different_login">
-                        <span> or</span>
-                    </div>
-                    <ul class="btn-login list_none text-center">
-                        <li><a href="#" class="btn btn-facebook"><i class="ion-social-facebook"></i>Facebook</a></li>
-                        <li><a href="#" class="btn btn-google"><i class="ion-social-googleplus"></i>Google</a></li>
-                    </ul>
-                    <div class="form-note text-center">Don't Have an Account? <a href="signup.html">Sign up now</a></div>
                 </div>
             </div>
         </div>
@@ -202,16 +205,7 @@
                     </div>
     			</div>
                 <div class="col-xl-2 col-md-4 col-sm-5">
-                    <div class="widget">
-                        <h6 class="widget_title">Useful Links</h6>
-                        <ul class="widget_links">
-                            <li><a href="#">Our Mission</a>
-                            <li><a href="#">Our services</a></li>
-                            <li><a href="#">Company history</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Support center</a>
-                        </ul>
-                    </div>
+
                 </div>
                 <div class="col-xl-5 col-md-6 col-sm-5">
                     <div class="widget">
@@ -219,7 +213,7 @@
                         <ul class="contact_info contact_info_light">
                             <li> 
                                 <i class="ti-location-pin"></i>
-                                <p>123 Street, Old Trafford, New South London , UK</p>
+                                <p>167 Union Street, Oldham, Greater Manchester OL1 1TD, UK</p>
                             </li>
                             <li> 
                                 <i class="ti-email"></i> 
@@ -245,7 +239,7 @@
     			<div class="bottom_footer border-top-tran">
     				<div class="row">
     					<div class="col-md-6">
-    						<p class="mb-md-0 text-center text-md-left">© 2021 All Rights Reserved by <span class="text_default">LAMS-Lucknow Academy of Medical Sciences (P) Ltd.</span></p>
+    						<p class="mb-md-0 text-center text-md-left">© <script>document.write(new Date().getFullYear())</script> All Rights Reserved by <span class="text_default">ABMAPLAB (P) Ltd.</span></p>
     					</div>
                         <div class="col-md-6">
                             <ul class="list_none footer_link text-center text-md-right">
