--- a/our_association.html
+++ b/our_association.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from templatemanja.com/educone/demo/course-detail.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 28 Mar 2021 18:53:16 GMT -->
+<!-- Mirrored from templatemanja.com/educone/demo/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 28 Mar 2021 18:53:13 GMT -->
 <head>
 <!-- Meta -->
 <meta charset="utf-8">
@@ -12,7 +12,7 @@
 <meta name="keywords" content="academy, course, education, elearning, learning, education html template, university template, college template, school template, online education template, tution center template">
 
 <!-- SITE TITLE -->
-<title>ABMAPLAB - Course Detail PLAB2</title>
+<title>ABMAPLAB Our Association</title>
 <!-- Favicon Icon -->
 <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
 <!-- Animation CSS -->
@@ -41,16 +41,6 @@
 </head>
 
 <body>
-
-<!-- LOADER -->
-<div id="preloader">
-    <div class="lds-ellipsis">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
-</div>
-<!-- END LOADER --> 
 
 <!-- START HEADER -->
 <header class="header_wrap fixed-top dark_skin main_menu_uppercase header_with_topbar">
@@ -89,11 +79,11 @@
               <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
 					<li ><a class="nav-link "  href="index.html">Home</a></li>
-                    <li class="dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">About Us</a>
+                    <li class="dropdown"><a class="dropdown-toggle nav-link active" data-toggle="dropdown" href="#">About Us</a>
                         <div class="dropdown-menu">
                             <ul>
                                 <li><a class="dropdown-item nav-link nav_item" href="academy_profile.html">Academy Profile</a></li>
-                                <li><a class="dropdown-item nav-link nav_item" href="our_association.html">Our Association</a></li>
+                                <li><a class="dropdown-item nav-link nav_item active" href="our_association.html">Our Association</a></li>
                                 <li><a class="dropdown-item nav-link nav_item" href="our_faculties.html">Our Faculties</a></li>
                                 <li><a class="dropdown-item nav-link nav_item" href="gallery.html">Gallery</a></li>
                             </ul>
@@ -101,11 +91,11 @@
                     </li>
                     <li><a class="nav-link " href="waytoplab.html">Way To PLAB</a></li>
 
-                    <li class="dropdown"><a class="dropdown-toggle nav-link active" data-toggle="dropdown" href="#">PLAB Courses</a>
+                    <li class="dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">PLAB Courses</a>
                         <div class="dropdown-menu">
                             <ul>
                                 <li><a class="dropdown-item nav-link nav_item" href="course-plab1-detail.html">PLAB-1 Course</a></li>
-                                <li><a class="dropdown-item nav-link nav_item active" href="course-plab2-detail.html">PLAB-2 Course</a></li>
+                                <li><a class="dropdown-item nav-link nav_item" href="course-plab2-detail.html">PLAB-2 Course</a></li>
                             </ul>
                         </div>
                     </li>
@@ -129,17 +119,16 @@
 <!-- END HEADER -->
 
 <!-- START SECTION BREADCRUMB -->
-<div class="breadcrumb_section background_bg overlay_bg_50 page_title_light" data-img-src="assets/images/plab2_bg.jpg">
+<div class="breadcrumb_section background_bg overlay_bg_50 page_title_light" data-img-src="assets/images/scholorhsip-bg.jpg">
     <div class="container"><!-- STRART CONTAINER -->
         <div class="row">
             <div class="col-sm-12">
                 <div class="page-title">
-            		<h1>Course Detail</h1>
+            		<h1>Our Association</h1>
                 </div>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Courses</a></li>
-                    <li class="breadcrumb-item active">PLAB-2</li>
+                    <li class="breadcrumb-item"><a href="#">Our Association</a></li>
                 </ol>
             </div>
         </div>
@@ -147,53 +136,41 @@
 </div>
 <!-- END SECTION BREADCRUMB -->
 
-<!-- START SECTION EVENT DETAIL -->
-<div class="section">
-	<div class="container">
-    	<div class="row">
-        	<div class="col-xl-12 col-lg-8">
-            	<div class="single_course">
-                    <div class="courses_title">
-                        <h4>PLAB 2 COURSE</h4>
+<!-- START SLIDE SECTION -->
+    <div class="container">
+        <br><div class="p-3 mb-2 bg-warning text-dark"><h3 >Our_Association</h3></div>
+        <div class="row justify-content-center">
+            <div class="col-lg-12 col-md-10 animation" data-animation="fadeInUp" data-animation-delay="0.2s">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="assets/images/Our_Association1.png" alt="First slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/images/Our_Association2.png" alt="Second slide">
+                      </div>
                     </div>
-                    <div class="course_img">
-						<a href="#">
-                            <img src="assets/images/plab2-home.jpg" alt="course_img">
-                        </a>
-                    </div>
-                    <div class="course_info">
-                        <div class="course_desc"> 
-                        	<div class="heading_s1">
-                        		<h4>Description:</h4>
-                            </div>
-                        	<p class="text-justify">We are regarded as one of the best training institutes in the UK as far as PLAB is concerned. If you are looking for the best training institute for PLAB, then we are your one-stop destination.</p>
-                            <p class="text-justify">We offer comprehensive training that would enable our students to crack the exam. Apart from the technical aspect, we also take care of the communication part as we understand that it is very important to make sure that the doctors are well versed with the linguistic skills.</p>
-                                <ul class="widget_categories">
-                                    <li><a href="#"><span class="categories_name">PLAB 2 Face2Face Course in Manchester (12 full day)</span>
-                                    <li><a href="#"><span class="categories_name">PLAB 2 Online Course (12 day)</span>
-                                    <h4><br>Course Highlight:</h4>
-                                    <li><a href="#"><span class="categories_name">Course covers all aspects of PLAB 2 as per GMC</span></a></li>
-                                    <li><a href="#"><span class="categories_name">Focus on communication & interpersonal skills</span></a></li>
-                                    <li><a href="#"><span class="categories_name">Up to date UK guidelines and protocols</span></a></li>
-                                    <li><a href="#"><span class="categories_name">Includes 2 mocks with individual feedback</span></a></li>
-                                    <li><a href="#"><span class="categories_name">Comprehensive study materials/notes</span></a></li>
-                                    <li><a href="#"><span class="categories_name">Equipped with all modern facilities</span></a></li>
-                                    <li><a href="#"><span class="categories_name">Mannequin & other practical teaching</span></a></li>
-                                    <li><a href="#"><span class="categories_name">Own accommodation near the course venue</span></a></li>
-                                    <li><a href="#"><span class="categories_name">Dedicated WhatsApp group for discussion</span></a></li>
-                                    <li><a href="#"><span class="categories_name">Brand new spacious premises</span></a></li>         
-                                </ul>
-                            </p>
-                            
-                        </div>
-                        
-                    </div>
-				</div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
             </div>
         </div>
+        <br>
     </div>
 </div>
-<!-- END SECTION EVENT DETAIL -->
+<!-- END 404 SECTION -->
 
 <!-- START FOOTER -->
 <footer class="bg_dark footer_dark">
@@ -301,5 +278,5 @@
 
 </body>
 
-<!-- Mirrored from templatemanja.com/educone/demo/course-detail.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 28 Mar 2021 18:53:21 GMT -->
+<!-- Mirrored from templatemanja.com/educone/demo/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 28 Mar 2021 18:53:14 GMT -->
 </html>
